# auto-note

./: .gitignore  PRD.md  README.md  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
fixtures/: session-sample.json
scripts/qa/: run_checks.sh
src/: App.css  App.test.tsx  App.tsx  ControlPanel.tsx  NoteCanvas.tsx  NoteCanvasToolbar.tsx  NoteInspector.tsx  NoteLaneHeader.tsx  ReplayOverlay.tsx  WorkspaceStatusBars.tsx  hotkeyTargets.ts  index.css  main.tsx  noteCanvasInteraction.ts  noteCanvasModel.test.ts  noteCanvasModel.ts  noteCanvasPaint.ts  noteCanvasProps.ts  noteSelection.ts  runtimeRefresh.ts  sessionSchema.test.ts  sessionSchema.ts  sessionTimeline.ts  store.ts  tauriClient.ts  timeline.css  timeline.test.ts  timeline.ts  types.ts  useMainAppController.ts  useNoteCanvasController.ts  useNoteCanvasPainter.ts  usePlaybackTimelineScroll.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: adapters.rs  commands.rs  error.rs  keymap.rs  lib.rs  main.rs  model.rs  persistence.rs  platform.rs  playback.rs  playback_tests.rs  recording.rs  recording_tests.rs  state.rs  state_playback.rs  state_tests.rs  timing.rs
src-tauri/src/keymap/: enigo.rs  macos.rs  tap.rs  tests.rs
src-tauri/src/state/: hotkeys.rs  input.rs  mod.rs  playback.rs  recording.rs  sessions.rs  tests.rs
src/app/: App.test.tsx  App.tsx
src/lib/: errorMessage.test.ts  errorMessage.ts  timeline.test.ts  timeline.ts  types.ts
tests/: windowsPackaging.test.ts
(+56 files in other folders)
